# nothon-calander-slackbot-project

./: .gitignore  Dockerfile  README.md  alembic.ini  appspec.yml  database.py  docker-compose.yml  entitiy.py  entity.py  main.py  myapi.db  pyproject.toml  test.py
.github/workflows/: main.yml
celery_config/: celery_app.py  celery_beat.py  celery_worker.py  check_cancel.py  test_send.py
deploy/:  appspec.yml
deploy/scripts/: stop_docker.sh
entity/: notion.py  notion_slack_mapping.py  slack.py
migrations/: env.py
migrations/versions/: 09cd3627b310_엔티티_생성.py  162bc928796c_.py  2b5a43df533a_참여자추가.py  443ccd921022_.py  536f81220df6_.py  75d0eb45571e_.py  8099d34fd9f9_.py  87b1eb8d52a7_.py  a3b07b1c17ed_.py  d4b6df660d65_.py  e6136f29f2c1_.py
persistance/: meeting_repository.py  save_meeting.py
scripts/: start_server.sh  stop_docker.sh
service/: check_meeting.py  check_meeting_id.py  farthing.py  read_calander.py  save_meeting_facade.py  worker_facade_service.py
src/: database.py  main.py
src/api/: meeting_controller.py
src/api/persistance/: __init__.py  meeting_repository.py  notion_repository.py  notion_slack_mapping_repository.py  slack_repository.py
src/api/scrum_api/: containers.py  question_controller.py  scrum_dto.py  scrum_process.py
src/api/service/: add_participants.py  check_meeting.py  containers.py  (+8 more)
src/celery_config/: celery_app.py  celery_beat.py  celery_worker.py  check_cancel.py  containers.py  send_message.py  test_send.py
src/entity/: __init__.py  notion.py  notion_slack_mapping.py  slack.py
src/utils/: redis_connect.py
